# bigann-benchmarks

./: Cargo.toml  README.md
src/: main.rs  prepare.rs  utils.rs
src/data/: mod.rs  number_to_arrow.rs  prepare.rs  raw.rs  standard.rs
