[package]
name = "bigann-benchmarks"
version = "0.1.0"
authors = [
    "Najib Ishaq <najib_ishaq@zoho.com>",
]
edition = "2021"
rust-version = "1.68"

[dependencies]
clam = { git = "https://github.com/URI-ABD/clam", branch = "updates/modularization" }
arrow = "41.0.0"
clap = { version = "4.3.3", features = ["derive", "cargo"] }
ndarray-npy = "0.8.1"
ndarray = "0.15.6"

[profile.test]
debug = 1
opt-level = 3

[profile.release]
strip = true
lto = true
codegen-units = 1
overflow-checks = true

[profile.bench]
debug = true
